--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "start": "node ./plugin/index.js",
     "test": "mocha --recursive --exit ./test/*/unit/**/*.js"
   },
   "repository": {
