--- a/example.env
+++ b/example.env
@@ -1,12 +1,12 @@
 ENVSEPARATOR=_
-DEBUG=kinesisstreamprovider
+DEBUG=kinesismodule
 plugin_plugin_refresh_token=plugin.JWT.refreshToken
 plugin_device_hive_plugin_ws_endpoint=ws://playground.devicehive.com/plugin/websocket
 plugin_plugin_topic=your_plugin_topic
 kinesis_aws_region=us-east-2
 kinesis_aws_accessKeyId=YOURAWSKEY
 kinesis_aws_secretAccessKey=your/awssecret/key
-kinesis_provider=dataStreams
+kinesis_dataDestination=direct_put
 kinesis_custom_buffering=true
 kinesis_custom_commandStreams=commands
 kinesis_custom_notificationStreams=notifications
